[package]
name = "miniORM"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Cargo.toml
[dependencies]
proc-macro2 = "1.0"
syn = "2.0.18"
quote = "1.0"
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"

[lib]
proc-macro = true

